# mobileKinetic-Agent

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
ClaudeShares/: DESIGN_SYSTEM.md  SURGERY_EXECUTION_MANIFEST.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PYTHON_PACKAGES_README.md  napkin_messages.json  rag_seed.json
app/src/main/assets/scripts/: .bashrc  RLM_MCP_DESIGN.md  add_sensor_endpoint.py  agenda_mcp_server.py  agent_orchestrator.py  caldav_client.py  caldav_server.py  camera_mcp.py  check_sdk.py  context_injector.py  conversation_processor.py  device_api_mcp.py  jsonl_strip.js  mcp_shell_server.py  mcp_tasker_server.py  mcp_tier1_server.py  mcp_tier2_server.py  memory_lifecycle.py  mka_config.py  rag_mcp_server.py  rlm_unified_implementation.py  seed_rag.py  (+9 more)
docs/: APP_IMPROVEMENTS_FOR_BUILD.md  TOOLS_SCREEN_AUDIT_DATASOURCE.md  TOOLS_SCREEN_DESIGN.md  VAULT_CREDENTIAL_FLOW.md  VAULT_PROMPT_INJECTION_ANALYSIS.md  build_promotion_template.md  toolDescriptions.json  watchdog_fixes.kt
docs/scripts/: backup_knowledge.sh  migrate_watchdog_logs.sh  promote_build.sh  restore_knowledge.sh  secure_vault.py
docs/watchdog/: watchdog_diagnostic.py  watchdog_integration_guide.md  watchdog_summary.txt
gradle/: libs.versions.toml
shared/: build.gradle.kts
terminal-emulator/: build.gradle.kts
terminal-emulator/src/main/jni/: CMakeLists.txt  termux-exec.c  termux.c
terminal-view/: build.gradle.kts
tools/: adb_mcp_server.py
(+201 files in other folders)
